@@ -1,0 +1,1 @@
+{% extends "placeholder_tests/test_variable_extends.html" %}
