@@ -1,0 +1,3 @@
+{% extends TEMPLATE|default:"placeholder_tests/base.html" %}
+{% load cms_tags %}
+{% block four %}{% placeholder "four" %}{% endblock %}
